# tock-project

./: .gitmodules  Cargo.toml  README.md
applications/drivers/: Makefile  example_driver.c  example_driver.h
applications/example_app/: Makefile  main.c
kernel/drivers/: Cargo.toml
kernel/microbit_v2/: Cargo.toml  Makefile  layout.ld
kernel/raspberry_pi_pico/: Cargo.toml  Makefile  layout.ld
