[package]
name = "drivers"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2018"

[dependencies]
kernel = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "kernel" }
enum_primitive = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "enum_primitive" }
tickv = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "tickv" }
