[package]
name = "microbit_v2"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
cortexm4 = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "cortexm4" }
capsules = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "capsules" }
kernel = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "kernel" }
nrf52 = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "nrf52" }
nrf52833 = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "nrf52833" }
components = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "components" }
nrf52_components = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "nrf52_components" }

drivers = { path = "../drivers" }
