[package]
name = "raspberry_pi_pico"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
cortexm0p = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "cortexm0p" }
capsules = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "capsules" }
kernel = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "kernel" }
rp2040 = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "rp2040" }
components = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "components" }
enum_primitive = { git = "https://github.com/tock/tock.git", tag = "release-2.0", package = "enum_primitive" }

drivers = { path = "../drivers" }
